feat: Allow to define a custom lustre.conf
The default template will not cover advanced configuration.

Remove the test to check if `lustre_lnet_networks` is defined since it
is by default. Moreover, we want to manage the `lustre.conf` without
this variable when using `lustre_conf`.

--- a/templates/lustre.conf.j2
+++ b/templates/lustre.conf.j2
@@ -1,5 +1,9 @@
 # {{ ansible_managed }}
+{% if lustre_conf is defined %}
+{{ lustre_conf }}
+{% else %}
 options lnet networks="{{ lustre_lnet_networks }}"
 options lnet lnet_transaction_timeout=100 lnet_retry_count=2
 options ko2iblnd peer_credits=32 peer_credits_hiw=16 concurrent_sends=64
 options libcfs cpu_pattern="" cpu_npartitions=4
+{% endif %}
